Fixes bug in Firefox causing submit button to sit misaligned.

--- a/assets/css/idx-omnibar.css
+++ b/assets/css/idx-omnibar.css
@@ -7,6 +7,7 @@
 .idx-omnibar-form input[type="submit"] {
   width: 40%;
   font-family: inherit;
+  vertical-align: top;
 }
 .idx-omnibar-form input[placeholder] {
   text-overflow: ellipsis;
